<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".ui.ViewPostFragment">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ImageView
            android:id="@+id/newzPostImage"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:src="@drawable/newz_thumbnail"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:contentDescription="@string/view_post_image_content_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/snackBarLayout" />

        <TextView
            android:id="@+id/postTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingTop="16dp"
            android:paddingBottom="20dp"
            android:text="@string/view_post_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newzPostImage" />

        <TextView
            android:id="@+id/postContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_post_content"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTitleTextView" />

        <TextView
            android:id="@+id/copyrightTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="70dp"
            android:text="@string/copyright"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postContentTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:padding="0dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEditPost"
        android:contentDescription="@string/view_post_edit_fab_content_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_edit"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDeletePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/view_post_delete_fab_content_desc"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_delete"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEditPost"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>